Creating site for 0.1-SNAPSHOT

--- a/surefire-report.html
+++ b/surefire-report.html
@@ -13,7 +13,7 @@
 		<meta name="description" content="" />
 		<meta http-equiv="content-language" content="en" />
 
-		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/flatly/bootstrap.min.css" rel="stylesheet" />
+		<link href="//netdna.bootstrapcdn.com/bootswatch/2.2.2/cerulean/bootstrap.min.css" rel="stylesheet" />
 		<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.2/css/bootstrap-responsive.min.css" rel="stylesheet" />
 		<link href="./css/bootswatch.css" rel="stylesheet" />
 		<link href="./css/reflow-skin.css" rel="stylesheet" />
@@ -174,10 +174,10 @@ function toggleDisplay(elementId) {
    <tr class="b"> 
     <td>65</td> 
     <td>0</td> 
-    <td>1</td> 
     <td>0</td> 
-    <td>98.462%</td> 
-    <td>37.14</td> 
+    <td>0</td> 
+    <td>100%</td> 
+    <td>33.134</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -210,7 +210,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>18.631</td> 
+    <td>16.647</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.interceptor">io.fixture.interceptor</a></td> 
@@ -219,7 +219,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.045</td> 
+    <td>0.046</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.controller">io.fixture.controller</a></td> 
@@ -228,16 +228,16 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.029</td> 
+    <td>0.036</td> 
    </tr> 
    <tr class="a"> 
     <td><a href="#io.fixture.repository">io.fixture.repository</a></td> 
     <td>22</td> 
     <td>0</td> 
-    <td>1</td> 
     <td>0</td> 
-    <td>95.455%</td> 
-    <td>18.4</td> 
+    <td>0</td> 
+    <td>100%</td> 
+    <td>16.365</td> 
    </tr> 
    <tr class="b"> 
     <td><a href="#io.fixture.domain">io.fixture.domain</a></td> 
@@ -246,7 +246,7 @@ function toggleDisplay(elementId) {
     <td>0</td> 
     <td>0</td> 
     <td>100%</td> 
-    <td>0.035</td> 
+    <td>0.04</td> 
    </tr> 
   </tbody> 
  </table> 
@@ -277,7 +277,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>6.228</td> 
+     <td>5.57</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.securityPersistentTokenRepositoryImplTest"><i class="icon-ok"></i></a></td> 
@@ -287,7 +287,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>6.177</td> 
+     <td>5.511</td> 
     </tr> 
     <tr class="b"> 
      <td><a href="#io.fixture.securityUserDetailsManagerImplTest"><i class="icon-ok"></i></a></td> 
@@ -297,7 +297,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>6.226</td> 
+     <td>5.566</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -327,7 +327,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.045</td> 
+     <td>0.046</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -357,7 +357,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.007</td> 
+     <td>0.012</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.controllerSecureControllerTest"><i class="icon-ok"></i></a></td> 
@@ -377,7 +377,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.014</td> 
+     <td>0.016</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -407,7 +407,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>6.137</td> 
+     <td>5.461</td> 
     </tr> 
     <tr class="a"> 
      <td><a href="#io.fixture.repositoryPersistentLoginRepositoryTest"><i class="icon-ok"></i></a></td> 
@@ -417,17 +417,17 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>6.111</td> 
+     <td>5.438</td> 
     </tr> 
     <tr class="b"> 
-     <td><a href="#io.fixture.repositoryUserRepositoryTest"><i class="icon-warning-sign"></i></a></td> 
+     <td><a href="#io.fixture.repositoryUserRepositoryTest"><i class="icon-ok"></i></a></td> 
      <td><a href="#io.fixture.repositoryUserRepositoryTest">UserRepositoryTest</a></td> 
      <td>7</td> 
      <td>0</td> 
-     <td>1</td> 
      <td>0</td> 
-     <td>85.714%</td> 
-     <td>6.152</td> 
+     <td>0</td> 
+     <td>100%</td> 
+     <td>5.466</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -457,7 +457,7 @@ function toggleDisplay(elementId) {
      <td>0</td> 
      <td>0</td> 
      <td>100%</td> 
-     <td>0.035</td> 
+     <td>0.04</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -476,7 +476,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIndex</td> 
-     <td>0.006</td> 
+     <td>0.011</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -507,7 +507,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAccessDenied</td> 
-     <td>0.013</td> 
+     <td>0.015</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -522,12 +522,12 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLogin</td> 
-     <td>0</td> 
+     <td>0.001</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testTerms</td> 
-     <td>0.001</td> 
+     <td>0</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -550,12 +550,12 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testGetId</td> 
-     <td>0.034</td> 
+     <td>0.04</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testIsNewWithVersion</td> 
-     <td>0.001</td> 
+     <td>0</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -573,7 +573,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testPreHandleWithNullThemeName</td> 
-     <td>0.044</td> 
+     <td>0.045</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -601,32 +601,32 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithSingleUser</td> 
-     <td>6.075</td> 
+     <td>5.408</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllNames</td> 
-     <td>0.005</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>0.009</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteWithInvalidName</td> 
-     <td>0.02</td> 
+     <td>0.014</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithMultipleUsers</td> 
-     <td>0.005</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDelete</td> 
-     <td>0.007</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -636,12 +636,12 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindAllUsernamesWithInvalidName</td> 
-     <td>0.004</td> 
+     <td>0.006</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidName</td> 
-     <td>0.006</td> 
+     <td>0.004</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -654,7 +654,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUnknownUser</td> 
-     <td>6.077</td> 
+     <td>5.408</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -669,17 +669,17 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUserWithMultiplePersistentLogins</td> 
-     <td>0.006</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidSeries</td> 
-     <td>0.004</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testDeleteAllForUsernameForUserWithOnePersistentLogin</td> 
-     <td>0.011</td> 
+     <td>0.004</td> 
     </tr> 
    </tbody> 
   </table> 
@@ -692,40 +692,22 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOne</td> 
-     <td>6.095</td> 
+     <td>5.423</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testExistsWithInvalidUsername</td> 
-     <td>0.005</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="a"> 
-     <td><a href="#io.fixture.repository.UserRepositoryTest.testDeleteWithGroupsAndPersistentLogins"><i class="icon-exclamation-sign"></i></a></td> 
-     <td><a href="#io.fixture.repository.UserRepositoryTest.testDeleteWithGroupsAndPersistentLogins">testDeleteWithGroupsAndPersistentLogins</a> 
-      <div class="detailToggle" style="display:inline"> 
-       <a href="javascript:toggleDisplay('io_fixture_repository_UserRepositoryTest_testDeleteWithGroupsAndPersistentLogins');"><span style="display:inline;" id="io_fixture_repository_UserRepositoryTest_testDeleteWithGroupsAndPersistentLoginsoff"> + </span><span style="display:none;" id="io_fixture_repository_UserRepositoryTest_testDeleteWithGroupsAndPersistentLoginson"> - </span>[ Detail ]</a> 
-      </div></td> 
-     <td>0.027</td> 
-    </tr> 
-    <tr class="b"> 
-     <td></td> 
-     <td>. Expected &lt;5&gt; actual &lt;6&gt;</td> 
-     <td></td> 
-    </tr> 
-    <tr class="a"> 
-     <td></td> 
-     <td> 
-      <div id="io_fixture_repository_UserRepositoryTest_testDeleteWithGroupsAndPersistentLoginserror" style="display:none;"> 
-       <div> 
-        <pre>java.lang.AssertionError: . Expected &lt;5&gt; actual &lt;6&gt;at kotlin.test.DefaultAsserter.fail(TestJVM.kt:82)at kotlin.test.DefaultAsserter.assertEquals(TestJVM.kt:66)at kotlin.test.TestPackage$src$Test$419798348.assertEquals(Test.kt:38)at kotlin.test.TestPackage.assertEquals$default(Unknown Source)at io.fixture.repository.UserRepositoryTest.testDeleteWithGroupsAndPersistentLogins(UserRepositoryTest.kt:50)</pre> 
-       </div> 
-      </div></td> 
-     <td></td> 
+     <td><i class="icon-ok"></i></td> 
+     <td>testDeleteWithGroupsAndPersistentLogins</td> 
+     <td>0.012</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindOneWithInvalidUsername</td> 
-     <td>0.005</td> 
+     <td>0.004</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -753,7 +735,7 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAddUserToGroup</td> 
-     <td>6.149</td> 
+     <td>5.481</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -763,37 +745,37 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindGroupAuthorities</td> 
-     <td>0.009</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateGroup</td> 
-     <td>0.012</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRenameGroup</td> 
-     <td>0.008</td> 
+     <td>0.01</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveGroupAuthority</td> 
-     <td>0.011</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testFindUsersInGroup</td> 
-     <td>0.006</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testRemoveUserFromGroup</td> 
-     <td>0.011</td> 
+     <td>0.015</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testAddGroupAuthority</td> 
-     <td>0.01</td> 
+     <td>0.012</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -811,17 +793,17 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUpdateToken</td> 
-     <td>6.143</td> 
+     <td>5.474</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testGetTokenForSeries</td> 
-     <td>0.007</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testCreateNewToken</td> 
-     <td>0.018</td> 
+     <td>0.02</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
@@ -839,32 +821,32 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLoadUserByUsernameWithInvalidUsername</td> 
-     <td>6.078</td> 
+     <td>5.41</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testLoadUserByUsername</td> 
-     <td>0.026</td> 
+     <td>0.028</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthentication</td> 
-     <td>0.007</td> 
+     <td>0.005</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUpdateUser</td> 
-     <td>0.037</td> 
+     <td>0.038</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithAuthenticationManagerSetsAuthentication</td> 
-     <td>0.01</td> 
+     <td>0.012</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithAuthenticationManagerChangesPassword</td> 
-     <td>0.011</td> 
+     <td>0.013</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -874,7 +856,7 @@ function toggleDisplay(elementId) {
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUserExists</td> 
-     <td>0.006</td> 
+     <td>0.007</td> 
     </tr> 
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
@@ -889,42 +871,16 @@ function toggleDisplay(elementId) {
     <tr class="a"> 
      <td><i class="icon-ok"></i></td> 
      <td>testUserExistsWithInvalidUsername</td> 
-     <td>0.007</td> 
+     <td>0.008</td> 
     </tr> 
     <tr class="b"> 
      <td><i class="icon-ok"></i></td> 
      <td>testChangePasswordWithoutAuthenticationManagerSetsAuthentication</td> 
-     <td>0.009</td> 
+     <td>0.01</td> 
     </tr> 
    </tbody> 
   </table> 
  </div> 
- <br /> 
-</div> 
-<div class="section"> 
- <h2 id="Failure_Details">Failure Details</h2> 
- <a name="Failure_Details"></a> 
- <p>[<a href="#Summary">Summary</a>] [<a href="#Package_List">Package List</a>] [<a href="#Test_Cases">Test Cases</a>]</p> 
- <br /> 
- <table border="1" class="bodyTable table table-striped table-hover"> 
-  <tbody> 
-   <tr class="a"> 
-    <td><i class="icon-exclamation-sign"></i></td> 
-    <td><a name="io.fixture.repository.UserRepositoryTest.testDeleteWithGroupsAndPersistentLogins"></a>testDeleteWithGroupsAndPersistentLogins</td> 
-   </tr> 
-   <tr class="b"> 
-    <td></td> 
-    <td>java.lang.AssertionError: . Expected &lt;5&gt; actual &lt;6&gt;</td> 
-   </tr> 
-   <tr class="a"> 
-    <td></td> 
-    <td> 
-     <div id="testDeleteWithGroupsAndPersistentLoginserror">
-       io.fixture.repository.UserRepositoryTest:50 
-     </div></td> 
-   </tr> 
-  </tbody> 
- </table> 
  <br /> 
 </div>
 			</div>
